Added styling and link

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,8 @@
   text-align: center;
 }
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-color: rgb(54,33,97);
+  padding: 20px 20px 10px 20px;
   color: white;
   margin-bottom:2em;
 }
